Some Final Fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,22 +50,8 @@ endif()
 # Load Common Code
 add_subdirectory(source)
 
-# Load Platform
-set(DEFAULT_PLATFORM "sdl")
-if(WIN32)
-    set(DEFAULT_PLATFORM "windows")
-endif()
-set(REMCPE_PLATFORM "${DEFAULT_PLATFORM}" CACHE STRING "ReMCPE Platform (Check <root>/platforms)")
-add_subdirectory("platforms/${REMCPE_PLATFORM}")
-
-# Load Sound Platform
-set(DEFAULT_SOUND_PLATFORM "openal")
-if(WIN32)
-    set(DEFAULT_SOUND_PLATFORM "directsound")
-endif()
-set(REMCPE_SOUND_PLATFORM "${DEFAULT_SOUND_PLATFORM}" CACHE STRING "ReMCPE Sound Platform (Check <root>/platforms/sound)")
-add_subdirectory("platforms/sound/${REMCPE_SOUND_PLATFORM}")
-target_link_libraries(reminecraftpe reminecraftpe-sound)
+# Load Platform-Specific Code
+add_subdirectory(platforms)
 
 # Assets
 if(EMSCRIPTEN)
