--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -348,6 +348,10 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Cow.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Creeper.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Pig.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\item\Crafting\Recipes.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\item\Crafting\Recipy.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\item\Inventory\CraftingContainer.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\tile\WorkbenchTile.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -458,6 +462,10 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Creeper.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Pig.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Rocket.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\item\Crafting\Recipes.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\item\Crafting\Recipy.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\item\Inventory\CraftingContainer.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\tile\WorkbenchTile.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
