EntityTypeDescriptor & EntityTypes  - Added EntityTypeDescriptor  - Added EntityType class  - Added EntityCategories class  - Fixed unecessary game crash that would occur when OpenAL throws an error

--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\ControllerMoveInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\MouseBuildInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\Lighting.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\BuildActionIntention.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
