--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -168,6 +168,10 @@
     <ClCompile Include="$(MC_ROOT)\source\world\level\levelgen\chunk\EmptyLevelChunk.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Sheep.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\SynchedEntityData.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityCategories.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityType.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\EntityTypeDescriptor.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\world\entity\MobCategory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Entity.hpp" />
@@ -279,7 +283,9 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Creeper.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Pig.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Rocket.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\EntityCategories.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\EntityType.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\EntityTypeDescriptor.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\MobFactory.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\levelgen\chunk\ChunkPos.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\level\levelgen\chunk\ChunkTilePos.hpp" />
@@ -289,6 +295,7 @@
     <ClInclude Include="$(MC_ROOT)\source\world\level\TilePos.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Sheep.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\SynchedEntityData.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\world\entity\MobCategory.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
