--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -192,6 +192,10 @@ add_library(reminecraftpe-core STATIC
 	world/entity/Pig.cpp
 	world/entity/Sheep.cpp
 	world/entity/SynchedEntityData.cpp
+	world/entity/EntityCategories.cpp
+	world/entity/EntityType.cpp
+	world/entity/EntityTypeDescriptor.cpp
+	world/entity/MobCategory.cpp
     world/level/Dimension.cpp
     world/level/Material.cpp
     world/level/LevelListener.cpp
