--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,10 +54,12 @@ jobs:
             uses: actions/checkout@v3
             with:
                 submodules: true
+          - name: Install MacPorts
+            uses: melusina-org/setup-macports@v1
           - name: Install Dependencies
             run: |
-                brew install sdl2
-                brew install libpng
+                sudo port install libsdl2 +universal
+                sudo port install libpng +universal
           - name: Build macOS Archive
             run: |
                 cd platforms/macos/projects/Minecraft
