Rendering Bugfixes  * Re-enabled lighting & normals that were disabled due to merge  * Re-added smooth outline rendering as fallback  * Fixed OpenGL reference in CMake files

--- a/platforms/sdl/CMakeLists.txt
+++ b/platforms/sdl/CMakeLists.txt
@@ -70,7 +70,7 @@ if(USE_GLES1_COMPATIBILITY_LAYER)
     endif()
 else()
     find_package(OpenGL REQUIRED)
-    target_link_libraries(reminecraftpe-core PUBLIC OpenGL::OpenGL)
+    target_link_libraries(reminecraftpe-core PUBLIC OpenGL::GL)
 endif()
 
 # WASM
