MinGW Support + CMake Refactor

--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ xcuserdata/
 /sound_data
 
 # Ignore linux/mingw build artifacts.
-/build
+/build*
 /minecraftcpp
 /minecraftcpp.exe
 
@@ -242,3 +242,11 @@ xcuserdata/
 # Ignore options.txt - where your configuration will be saved
 /game/options.txt
 /game/assetsO
+/game/assets/gui/feedback_fill.png
+/game/assets/gui/feedback_outer.png
+/game/assets/snow.png
+/game/assets/mob/pig.png
+
+# CLion
+/.idea
+/cmake-build-*
