Properly Build stb_vorbis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,9 @@ if(ANDROID)
     link_libraries(log)
 endif()
 
+# stb_image And Other Libraries
+add_subdirectory(thirdparty/stb_image EXCLUDE_FROM_ALL)
+
 # Load Common Code
 add_subdirectory(source)
 
