--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\MouseBuildInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\Lighting.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\BuildActionIntention.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\sound\sound_list.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
