--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -284,7 +284,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\renderer\VertexPT.hpp">
       <Filter>Header Files\Renderer</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\source\client\sound\SimpleSoundRepository.hpp">
+    <ClInclude Include="..\..\..\..\source\client\sound\SoundPathRepository.hpp">
       <Filter>Header Files\Sound</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\sound\SoundData.hpp">
@@ -462,6 +462,9 @@
       <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\sound\sound_list.h">
+      <Filter>Header Files\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="$(MC_ROOT)\source\client\sound\music_list.h">
       <Filter>Header Files\Sound</Filter>
     </ClInclude>
   </ItemGroup>
@@ -673,7 +676,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\WaterSideTexture.cpp">
       <Filter>Source Files\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\sound\SimpleSoundRepository.cpp">
+    <ClCompile Include="..\..\..\..\source\client\sound\SoundPathRepository.cpp">
       <Filter>Source Files\Sound</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\sound\SoundData.cpp">
