--- a/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj
+++ b/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj
@@ -66,6 +66,7 @@
     <ClCompile Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl_base.cpp" />
     <ClCompile Include="$(MC_ROOT)\platforms\sdl\desktop\AppPlatform_sdl.cpp" />
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c" />
+    <ClCompile Include="$(MC_ROOT)\platforms\openal\SoundStreamAL.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\compat\KeyCodes.hpp" />
@@ -73,6 +74,7 @@
     <ClInclude Include="$(MC_ROOT)\platforms\openal\SoundSystemAL.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl_base.hpp" />
     <ClInclude Include="$(MC_ROOT)\platforms\sdl\desktop\AppPlatform_sdl.hpp" />
+    <ClInclude Include="$(MC_ROOT)\platforms\openal\SoundStreamAL.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Client\Client.vcxproj">
