--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,38 +6,33 @@ on:
 
 jobs:
     linux:
-        strategy:
-            fail-fast: false
-            matrix:
-                include:
-                  - name: OpenGL ES
-                    flags: "-DUSE_GLES1_COMPATIBILITY_LAYER=ON"
-                  - name: OpenGL
-                    flags: "-DUSE_GLES1_COMPATIBILITY_LAYER=OFF"
-        name: Linux (${{ matrix.name }})
+        name: Linux
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Repository
-            uses: actions/checkout@v3
+            uses: actions/checkout@v4
             with:
                 submodules: true
           - name: Install Dependencies
             run: |
                 sudo apt-get update
-                sudo apt-get install --no-install-recommends -y build-essential cmake ninja-build libopenal-dev libsdl2-dev zlib1g-dev
+                sudo apt-get install --no-install-recommends -y \
+                    build-essential \
+                    cmake ninja-build \
+                    libopenal-dev \
+                    libsdl2-dev zlib1g-dev
           - name: Build
             run: |
-                cd platforms/sdl
                 mkdir build
                 cd build
-                cmake -GNinja ${{ matrix.flags }} ..
+                cmake -GNinja ..
                 cmake --build .
     wasm:
         name: WASM
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Repository
-            uses: actions/checkout@v3
+            uses: actions/checkout@v4
             with:
                 submodules: true
           - name: Install Dependencies
@@ -51,15 +46,16 @@ jobs:
         runs-on: macos-latest
         steps:
           - name: Checkout Repository
-            uses: actions/checkout@v3
+            uses: actions/checkout@v4
             with:
                 submodules: true
           - name: Install MacPorts
             uses: melusina-org/setup-macports@v1
           - name: Install Dependencies
             run: |
-                sudo port install libsdl2 +universal
-                sudo port install libpng +universal
+                port selfupdate
+                port install libsdl2 +universal
+                port install libpng +universal
           - name: Build macOS Archive
             run: |
                 cd platforms/macos/projects/Minecraft
@@ -103,11 +99,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
           - name: Checkout Repository
-            uses: actions/checkout@v3
+            uses: actions/checkout@v4
             with:
                 submodules: true
           - name: Setup JDK
-            uses: actions/setup-java@v3
+            uses: actions/setup-java@v4
             with:
                 java-version: '17'
                 distribution: 'temurin'
@@ -116,3 +112,32 @@ jobs:
             run: |
                 cd ${{ matrix.directory }}
                 ./gradlew build
+    mingw:
+      strategy:
+        fail-fast: false
+        matrix:
+          include:
+            - name: Win32
+              flags: "-DREMCPE_PLATFORM=windows"
+            - name: SDL
+              flags: "-DREMCPE_PLATFORM=sdl"
+      name: MinGW-w64 (${{ matrix.name }})
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Repository
+          uses: actions/checkout@v4
+          with:
+            submodules: true
+        - name: Install Dependencies
+          run: |
+            sudo apt-get update
+            sudo apt-get install --no-install-recommends -y \
+                build-essential \
+                cmake ninja-build \
+                mingw-w64
+        - name: Build
+          run: |
+            mkdir build
+            cd build
+            cmake -GNinja -DCMAKE_TOOLCHAIN_FILE=../cmake/mingw-w64-toolchain.cmake ${{ matrix.flags }} ..
+            cmake --build .
