--- a/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj.filters
+++ b/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="$(MC_ROOT)\platforms\sdl\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\platforms\openal\SoundSystemAL.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\sound\openal\SoundSystemAL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl_base.cpp">
@@ -33,7 +33,7 @@
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\platforms\openal\SoundStreamAL.cpp">
+    <ClCompile Include="$(MC_ROOT)\platforms\sound\openal\SoundStreamAL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -44,7 +44,7 @@
     <ClInclude Include="$(MC_ROOT)\compat\KeyCodes.hpp">
       <Filter>Header Files\Compatibility</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\platforms\openal\SoundSystemAL.hpp">
+    <ClInclude Include="$(MC_ROOT)\platforms\sound\openal\CustomSoundSystem.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\compat\SDLKeyCodes.h">
@@ -53,7 +53,7 @@
     <ClInclude Include="$(MC_ROOT)\platforms\sdl\base\AppPlatform_sdl_base.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\platforms\openal\SoundStreamAL.hpp">
+    <ClInclude Include="$(MC_ROOT)\platforms\sound\openal\SoundStreamAL.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
